--- a/TW/TW_EngineTester/TW_EngineTester.vcxproj.filters
+++ b/TW/TW_EngineTester/TW_EngineTester.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="ClockTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MemAllocatorTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
