TW: Utils added, multi-core understood
git-tfs-id: [https://twang006.visualstudio.com/]$/TW;C133

--- a/TW/TW_Engine/TW_Engine.vcxproj
+++ b/TW/TW_Engine/TW_Engine.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="FFTCC.h" />
     <ClInclude Include="MemManager.h" />
     <ClInclude Include="StopWatch.h" />
+    <ClInclude Include="TW_utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
