--- a/TW/TW_EngineTester/TW_EngineTester.vcxproj.filters
+++ b/TW/TW_EngineTester/TW_EngineTester.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="MemAllocatorTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FftccTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
