TW_Engine: paDIC's GPU-based FFT-CC algorithm all done!
git-tfs-id: [https://twang006.visualstudio.com/]$/TW;C142

--- a/TW/TW_EngineTester/TW_EngineTester.vcxproj
+++ b/TW/TW_EngineTester/TW_EngineTester.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="gtest-all.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MemAllocatorTest.cpp" />
+    <ClCompile Include="Other_Test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
