TW_Engine: Begin concurrent_buffer
git-tfs-id: [https://twang006.visualstudio.com/]$/TW;C144

--- a/TW/TW_Engine/TW_Engine.vcxproj
+++ b/TW/TW_Engine/TW_Engine.vcxproj
@@ -155,6 +155,7 @@
   <ItemGroup>
     <ClInclude Include="helper_cuda.h" />
     <ClInclude Include="TW.h" />
+    <ClInclude Include="TW_Concurrent_Buffer.h" />
     <ClInclude Include="TW_paDIC_cuFFTCC2D.h" />
     <ClInclude Include="TW_paDIC_FFTCC2D.h" />
     <ClInclude Include="TW_MemManager.h" />
